# chat.c

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  Makefile  README.md  test.sh
src/: chat.c  chat.h  libchat.c  libchat.h  test.c
